I948127: Reproduce OOM Exception